# Reverse-Socks5-WebSocks

./: Cargo.toml  README.markdown
axum_server/: .env  Cargo.toml
axum_server/src/: main.rs
axum_server/src/controllers/: auth_controller.rs  connection_controller.rs  mod.rs
axum_server/src/helpers/: db_helper.rs  jwt_helper.rs  mod.rs
axum_server/src/migrations/: 0001_initial.up.sql
axum_server/src/models/: appstate.rs  claims.rs  login_model.rs  mod.rs  register_req.rs  response_model.rs
axum_server/src/routes/: auth_route.rs  connection_route.rs  main_route.rs  mod.rs
axum_server/src/services/: auth_service.rs  connection_service.rs  mod.rs
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
frontend/src/: index.html
frontend/src/app/: app.html  app.routes.ts  app.ts
frontend/src/app/models/: response.ts
frontend/src/app/services/: main.service.ts
frontend/src/app/views/connected-users/: connected-users.html  connected-users.ts
frontend/src/app/views/login/: login.html  login.ts
frontend/src/app/views/register/: register.html  register.ts
implant/: Cargo.toml
implant/src/: config.rs  lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
server/ssl/: cert.pem  key.pem
utils/: Cargo.toml
utils/src/: lib.rs
