[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5", features = ["fs", "cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
jsonwebtoken = "8.3"
bcrypt = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
utils = { path = "../utils" }
serde_json = "1.0.142"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
http = "1.3.1"
axum = "0.8.4"
dotenv = "0.15"
tokio-tungstenite = "0.27.0"
url = "2.5.4"

[features]
debug = []
trace = []
